--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,18 @@
 {
   "name": "web_project_around_auth",
-  "private": true,
   "version": "1.0.0",
+  "private": true,
   "type": "module",
+
+  "engines": {
+    "node": ">=22.15.0"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ],
+
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -13,6 +23,7 @@
     "preview": "vite preview",
     "deploy": "npm run build && scp -r -i ~/.ssh/id_ed25519 ./docs/* emaildavanessayuri@aroundtheusa.sevencomets.com:/home/emaildavanessayuri/web_project_around_frontend"
   },
+
   "dependencies": {
     "react": "19.2.0",
     "react-dom": "19.2.0",
@@ -34,10 +45,5 @@
     "globals": "^16.2.0",
     "prettier": "^3.6.2",
     "vite": "^7.1.12"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not op_mini all"
-  ]
+  }
 }
