build: add and configure dotenv for environment variable management

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,12 +2,10 @@
   "name": "web_project_around_express",
   "version": "1.0.0",
   "description": "Back-end focused on creating a server for the Around The U.S. Project",
-
   "main": "app.js",
   "engines": {
     "node": ">=22.15.0"
   },
-
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
@@ -15,8 +13,8 @@
     "lint": "npx eslint .",
     "lint:fix": "eslint . --ext js,jsx --fix"
   },
-
   "dependencies": {
+    "dotenv": "17.2.3",
     "express": "5.1.0",
     "mongoose": "8.18.0"
   },
@@ -27,7 +25,6 @@
     "nodemon": "3.1.10",
     "open": "7.4.2"
   },
-
   "repository": {
     "type": "git",
     "url": "git+https://github.com/VanessaYuriAB/web_project_around_express.git"
