--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "dotenv": "17.2.3",
     "express": "5.1.0",
-    "mongoose": "8.18.0"
+    "mongoose": "8.18.0",
+    "validator": "13.15.23"
   },
   "devDependencies": {
     "eslint": "8.56.0",
