--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "start": "node app.js",
     "dev": "nodemon app.js",
     "dev:open": "node -e \"require('open')('http://localhost:3000')\" && npm run dev",
+    "prepare": "husky",
     "lint": "npx eslint .",
     "lint:fix": "eslint . --ext js,jsx --fix",
     "format": "prettier --write .",
@@ -27,9 +28,15 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.5.4",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
     "nodemon": "^3.1.10",
     "open": "^7.4.2",
     "prettier": "^3.7.0"
+  },
+  "lint-staged": {
+    "*.{js,ts}": "npm run lint:fix",
+    "*.{json,md}": "npm run format"
   },
   "repository": {
     "type": "git",
