--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "bcryptjs": "3.0.3",
     "dotenv": "17.2.3",
     "express": "5.1.0",
+    "jsonwebtoken": "9.0.2",
     "mongoose": "8.18.0",
     "validator": "13.15.23"
   },
