--- a/frontend/.prettierignore
+++ b/frontend/.prettierignore
@@ -1,5 +1,13 @@
-vendor/normalize.css
 node_modules
 dist
 build
 public
+coverage
+vendor/normalize.css
+package-lock.json
+.env
+.editorconfig
+.npmrc
+eslint.config.js
+.husky/
+*.log
