--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -1,7 +1,12 @@
 {
+  "semi": true,
   "singleQuote": true,
   "printWidth": 80,
-  "trailingComma": "es5",
+  "trailingComma": "all",
   "bracketSpacing": true,
-  "endOfLine": "lf"
+  "endOfLine": "lf",
+
+  "arrowParens": "always",
+  "jsxSingleQuote": false,
+  "tabWidth": 2
 }
