chore(eslint): disable ESLint rule for next parameter
The middleware for centralized error handling does not use the parameter. The argsIgnorePattern option specifies the next variable as an exception, ignoring it.

--- a/backend/.eslintrc
+++ b/backend/.eslintrc
@@ -9,6 +9,8 @@
     // Allow dangling underscores in identifiers, specifically for MongoDB _id
     "no-underscore-dangle": ["error", { "allow": ["_id"] }],
     // Enforce Unix linebreaks (LF : \n) for consistency across platforms
-    "linebreak-style": ["error", "unix"]
+    "linebreak-style": ["error", "unix"],
+    // Specifies exceptions, in this case, ignore the next variable
+    "no-unused-vars": ["error", { "argsIgnorePattern": "next" }]
   }
 }
