--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "dotenv": "17.2.3",
     "express": "5.1.0",
     "express-winston": "4.2.0",
+    "helmet": "8.1.0",
     "jsonwebtoken": "9.0.2",
     "mongoose": "8.18.0",
     "validator": "13.15.23",
