--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "dev:open": "node -e \"require('open')('http://localhost:3000')\" && npm run dev",
+    "dev:open": "node -e \"require('open')(`http://localhost:${process.env.PORT}`)\" && npm run dev",
     "prepare": "husky",
     "lint": "npx eslint .",
     "lint:fix": "eslint . --ext js,jsx --fix",
