fix(backend): correct environment variable flow
- Ensure app runs without .env file in development environment as per roadmap
- Add custom class to handle configuration errors in .env files
- Configure local database for development environment

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -6,7 +6,7 @@
 MONGODB_URI=mongodb+srv://<usuario>:<senha>@<cluster>.mongodb.net
 
 # Nome do banco de dados (não é o nome da coleção)
-DB_NAME=nome-do-banco
+DB_NAME=<nome-do-banco>
 
 # -------------------------------
 # Configurações do Servidor
@@ -16,21 +16,21 @@ DB_NAME=nome-do-banco
 PORT=3000
 
 # Ambiente da aplicação: development | production | test
-NODE_ENV=production
+NODE_ENV=development
 
 # -------------------------------
 # Segurança e Autenticação
 # -------------------------------
 
 # Chave secreta para assinar tokens JWT
-JWT_SECRET=secret-key
+JWT_SECRET=<sua-chave-secreta>
 
 # -------------------------------
 # Configurações de CORS
 # -------------------------------
 
 # Lista de origens permitidas (separadas por vírgula)
-CORS_ORIGIN=http://localhost:3001,https://meusite.com
+CORS_ORIGIN=https://example.com
 
 # -------------------------------
 # Rate Limiting
@@ -44,4 +44,4 @@ RATE_LIMIT_MAX=100
 # -------------------------------
 
 # URLs permitidas para CSP (Content Security Policy)
-CSP_CONNECT_SRC=http://localhost:3000,https://minhaapi.com
+CSP_CONNECT_SRC=https://minhaapi.com
