chore(frontend): add and run the deployment script in package.json
Configured to generate the build and deploy it to the project's VM server.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "lint:fix": "eslint . --ext js,jsx --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "npm run build && scp -r -i ~/.ssh/id_ed25519 ./dist/* emaildavanessayuri@aroundtheusa.sevencomets.com:/home/emaildavanessayuri/web_project_api_full/frontend/dist"
   },
   "dependencies": {
     "react": "~19.2.0",
